# vlm-ocr

./: .gitignore  README.md  example_ocr_detection.py  pyproject.toml  requirements.txt  setup.py  test_cpu_only.py  test_qwen_invoice.py  test_qwen_simple.py  test_vlm_ocr.py  vlm_ocr_extraction.py
notebooks/: Test.ipynb  qwen_vlm_extraction.ipynb  qwen_vlm_simple.ipynb
visionlang/: __init__.py
visionlang/core/: __init__.py  classification.py  embeddings.py
visionlang/examples/: 01_embeddings_basics.py  02_zero_shot_classification.py  03_image_captioning.py  04_object_detection.py  __init__.py
visionlang/models/: __init__.py  caption.py  detection.py
visionlang/utils/: __init__.py  data_loader.py  visualization.py
